--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -62,7 +62,20 @@
 }
 
 .post{
-    height: 30px;
+    font-size: 27px;
+    opacity: 0.7;
+    color: rgb(138, 2, 2);
+    border: 0px transparent;
+}
+.post:hover{
+   opacity: 1;
+   transition: 0.5;
+   color: rgb(138, 2, 2);
+   border: 0px transparent;
+}
+.post:active{
+    color: black;
+    border: 0px transparent;
 }
 
 .write a{
